apps/00-infra/vpa/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: vpa
  labels:
    pod-security.kubernetes.io/enforce: baseline
